--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <script>
     // Get your shorts on - this is an array workout!
@@ -27,29 +29,50 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(i=>i.year>=1500 && i.year<1600);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventory first and last names
+    const fulNames = inventors.map(i=>`${i.first} ${i.last}`);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    inventors.sort((a, b)=>a.year-b.year);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const lifeTimeOfAll = inventors.reduce((result, i)=>result+i.passed-i.year, 0);
 
     // 5. Sort the inventors by years lived
+    inventors.sort((a, b)=>-(a.passed - a.year)+(b.passed - b.year));
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const wrapper = document.querySelector('.mw-category');
+    const links = Array.from(wrapper && wrapper.querySelectorAll('a')||[]);
+    const de = links
+    .map(i=>i.textContent)
+    .filter(i=>i.includes('de'))
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    people.sort((a, b)=>{
+      const [al, af] = a.split(', ');
+      const [bl, bf] = b.split(', ');
+      return al>bl?1:-1;
+    });
+
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const sum = data.reduce((result, i)=>{
+      result[i] = result[i]+1||1;
+      return result
+    },{});
+    console.log(sum);
 
   </script>
 </body>
+
 </html>
