--- a/18 - Adding Up Times with Reduce/index.html
+++ b/18 - Adding Up Times with Reduce/index.html
@@ -182,6 +182,21 @@
     </li>
 
 <script>
+const items = Array.from(document.querySelectorAll('[data-time]'));
+
+const seconds = items.reduce((sum, i)=>{
+  const stringTime = i.dataset.time;
+  const [mins, secs] = stringTime.split(':').map(parseFloat);
+  return sum + mins * 60 + secs;
+}, 0);
+
+let secondsLeft = seconds;
+const hours = (secondsLeft/3600)|0;
+secondsLeft %=3600;
+const mins = (secondsLeft/60)|0;
+secondsLeft %=60;
+console.log(`${hours}:${mins}:${secondsLeft}`);
+
 </script>
 </body>
 </html>
