--- a/21 - Geolocation/index.html
+++ b/21 - Geolocation/index.html
@@ -59,10 +59,13 @@
   <script>
     const arrow = document.querySelector('.arrow');
     const speed = document.querySelector('.speed-value');
-
-    navigator.geolocation.watchPosition((data) => {
+    console.log()
+    navigator.geolocation.getCurrentPosition((data) => {
+    // navigator.geolocation.watchPosition((data) => {
       console.log(data);
+      
       speed.textContent = data.coords.speed;
+      console.log(data.coords.speed);
       arrow.style.transform = `rotate(${data.coords.heading}deg)`;
     }, (err) => {
       console.err(err);
