--- a/21 - Geolocation/index.html
+++ b/21 - Geolocation/index.html
@@ -60,8 +60,8 @@
     const arrow = document.querySelector('.arrow');
     const speed = document.querySelector('.speed-value');
     console.log()
-    navigator.geolocation.getCurrentPosition((data) => {
-    // navigator.geolocation.watchPosition((data) => {
+    // navigator.geolocation.getCurrentPosition((data) => {
+    navigator.geolocation.watchPosition((data) => {
       console.log(data);
       
       speed.textContent = data.coords.speed;
