--- a/25 - Event Capture, Propagation, Bubbling and Once/index.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index.html
@@ -39,7 +39,16 @@
 
 <button></button>
 <script>
+  const divs = document.querySelectorAll('div');
 
+  function logText(e){
+    console.log(this.classList.value);
+  }
+
+  divs.forEach(i=>i.addEventListener('click', logText, {
+    capture: false,
+    once: true
+  }))
 </script>
 </body>
 </html>
