--- a/26 - Stripe Follow Along Nav/index.html
+++ b/26 - Stripe Follow Along Nav/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Follow Along Nav</title>
 </head>
+
 <body>
   <h2>Cool</h2>
   <nav class="top">
@@ -17,7 +19,8 @@
         <div class="dropdown dropdown1">
           <div class="bio">
             <img src="https://logo.clearbit.com/wesbos.com">
-            <p>Wes Bos sure does love web development. He teaches things like JavaScript, CSS and BBQ. Wait. BBQ isn't part of web development. It should be though!</p>
+            <p>Wes Bos sure does love web development. He teaches things like JavaScript, CSS and BBQ. Wait. BBQ isn't part
+              of web development. It should be though!</p>
           </div>
         </div>
       </li>
@@ -66,7 +69,7 @@
     </ul>
   </nav>
 
-<style>
+  <style>
   html {
     box-sizing: border-box;
     font-family: "Arial Rounded MT Bold","Helvetica Rounded",Arial,sans-serif
@@ -208,7 +211,44 @@
 </style>
 
 <script>
+  const triggers = document.querySelectorAll('.cool > li');
+  const background = document.querySelector('.dropdownBackground');
+  const nav = document.querySelector('.top');
+
+  function hoverIn() {
+    this.classList.add('trigger-enter');
+    setTimeout(() => this.classList.contains('trigger-enter') && this.classList.add('trigger-enter-active'), 150);
+    background.classList.add('open');
+
+    const dropdown = this.querySelector('.dropdown');
+    const dropdownCoords = dropdown.getBoundingClientRect();
+
+    const navCoords = nav.getBoundingClientRect();
+
+    const coords = {
+      height: dropdownCoords.height,
+      width: dropdownCoords.width,
+      top: dropdownCoords.top - navCoords.top,
+      left: dropdownCoords.left - navCoords.left,
+    };
+
+    background.style.setProperty('width', `${coords.width}px`);
+    background.style.setProperty('height', `${coords.height}px`);
+    background.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
+  }
+
+  function hoverOut() {
+    this.classList.remove('trigger-enter', 'trigger-enter-active');
+    background.classList.remove('open');
+  }
+
+  triggers.forEach(i => {
+    i.addEventListener('mouseenter', hoverIn);
+    i.addEventListener('mouseleave', hoverOut);
+  });
+
 </script>
 
 </body>
+
 </html>
